Amended styling of header banners to remedy flickering position on mobile - removed bg-position: fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -408,7 +408,6 @@ color: #fff;
     background-repeat: no-repeat;
     box-shadow: 0px 2px 5px -2px #2b2b2b;
     z-index: 2;
-    background-attachment: fixed;
     height: 100vh;
     position: relative;
 }
@@ -416,7 +415,7 @@ color: #fff;
 .homepage-overlay, .location-pg-overlay  {
     width: 100%;
     height: 100%;
-    background: linear-gradient(180deg, #001631a6 45%, rgb(94 121 255 / 0%) 100%);
+    background: linear-gradient(166deg, #001632a1 15%, rgba(0, 16, 98, 0.26));
     position: relative;
     z-index: -1;
 }
@@ -579,11 +578,10 @@ color: #fff;
 #locations_header {
     background: url(../images/london_arial2.jpg);
     background-size: cover;
-    background-position-y: 85%;
+    background-position-y: 15%;
     background-repeat: no-repeat;
     box-shadow: 0px 2px 5px -2px #2b2b2b;
-    z-index: 3;
-    background-attachment: fixed;
+    z-index: 1;
 }
 
 
